--- a/frontend/src/pages/CoverLetters/CoverLetterEditorPage.module.css
+++ b/frontend/src/pages/CoverLetters/CoverLetterEditorPage.module.css
@@ -241,6 +241,13 @@
   color: #1f2937;
 }
 
+.editorProse {
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
 .previewProse h1,
 .previewProse h2,
 .previewProse h3 {
