--- a/frontend/src/pages/Applications/components/ApplicationList.module.css
+++ b/frontend/src/pages/Applications/components/ApplicationList.module.css
@@ -226,11 +226,13 @@
   }
 }
 
-.actionButtonDownload {
+.actionButtonDownload,
+.actionButtonDownloadCL {
   @apply border-gray-200;
 }
 
-.actionButtonDownload:hover {
+.actionButtonDownload:hover,
+.actionButtonDownloadCL:hover {
   @apply bg-green-50 border-green-200;
 }
 
@@ -443,11 +445,13 @@
   @apply text-gray-500;
 }
 
-.dark .actionButtonDownload {
+.dark .actionButtonDownload,
+.dark .actionButtonDownloadCL {
   @apply border-gray-700;
 }
 
-.dark .actionButtonDownload:hover {
+.dark .actionButtonDownload:hover,
+.dark .actionButtonDownloadCL:hover {
   @apply bg-green-900 bg-opacity-20 border-green-700;
 }
 
